// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component should accept a backgroundColor 1`] = `
<View
  backgroundColor="salmon"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Boom!
    </Text>
  </View>
</View>
`;

exports[`the Card component should accept additional props 1`] = `
<View
  accessible={false}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`the Card component should accept and render passed in styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "height": 400,
      "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "92%",
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`the Card component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`the Card component should render children 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Boom!
    </Text>
  </View>
</View>
`;
